# vn2024_pipeline

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  qc_check.py  run_pipeline.py
config/: audit_sources.json  audit_sources_v4.json  prediction_rule_registry.json  remap_anchors_v4.json  settings.py
docs/: AGENT_GUIDE.md  CODEGRAPH.md  IMPROVEMENT_METHODS.md  README.md  RECALL_FUNNEL_DASHBOARD_PLAN.md  RECALL_FUNNEL_README.md  RECALL_RECOVERY_ANALYSIS.md  REFERENCE_COMPLIANCE_PLAN.md  Surgical_Mapping_Workflow_Guide.html  WORKFLOW_GUIDE_PLAIN_LANGUAGE_RECOMMENDATIONS.md
outputs/: Dashboard.html  India_FY2024_DQ_Compliance_Report.xlsx  India_FY2024_ML_Map_Mapped.xlsx  India_FY2025_DQ_Compliance_Report.xlsx  India_FY2025_ML_Map_Mapped.xlsx  India_ML_Map_Mapped.xlsx  Pakistan_FY2024_DQ_Compliance_Report.xlsx  Pakistan_FY2024_ML_Map_Mapped.xlsx  Pakistan_FY2024_ML_Map_Mapped_SurgicalOnly.xlsx  Pakistan_FY2024_SurgicalOnly_QA.xlsx  Pakistan_FY2024_Workflow_Improvement_Review.xlsx  Pakistan_FY2025_DQ_Compliance_Report.xlsx  Pakistan_FY2025_ML_Map_Mapped.xlsx  Pakistan_ML_Map_Mapped.xlsx  VN2024_Methodology.html  Vietnam_FY2024_DQ_Compliance_Report.xlsx  Vietnam_FY2024_ML_Map_Mapped.xlsx  Vietnam_FY2024_Workflow_QA_Report.xlsx  Vietnam_FY2025_DQ_Compliance_Report.xlsx  Vietnam_FY2025_ML_Map_Mapped.xlsx  Vietnam_ML_Map_Mapped.xlsx
reference/: LINEAGE.md  README.md  _FOLDER_SPEC.md  build_reference_db.py  list_catalog.csv  loader.py  reference.sqlite  reference_lists.csv  registry.yml  term_lists.csv  term_mappings.csv
src/: codegraph.py  step1_extract.py  (+5 more)
(+135 files in other folders)
